♻️ refactor: general code improvements
